sql/test/unit/checks/fail_no_chek_col.exp
select chek from (select check(2 > 1) as chek, 2 as foo);
^
|
 ----- ERROR
Error: line 1, character 0:
Unbound name: chek
